<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:gravity="center_horizontal">
  <EditText
      android:id="@+id/distance"
      android:hint="@string/totalDistance"
      android:gravity="center_horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number"/>


  <EditText
      android:id="@+id/velocity"
      android:hint="@string/velocity"
      android:gravity="center_horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="number"/>


  <Button
      android:id="@+id/calculate"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:text="@string/calculate"
      android:onClick="calculate"/>

  <TextView
      android:id="@+id/timeWithBuffer"
      android:text="@string/totalTime"
      android:gravity="center_horizontal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"/>

  <Button
      android:id="@+id/save"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:text="@string/save"
      android:onClick="saveData"/>

  <Button
      android:id="@+id/captureImage"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="20dp"
      android:text="@string/captureImage"
      android:onClick="captureImage"/>

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="match_parent"
      android:layout_height="300px"
      android:src="@android:drawable/ic_menu_report_image" />
</LinearLayout>

